--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,35 @@
   font-family: 'Roboto', sans-serif;
   src: url(../fonts/roboto/Roboto-Medium.ttf);
   font-weight: normal; }
+header {
+  background: #f7f7f7;
+  padding: 10px 0; }
+  header .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center; }
+    header .header .logo img {
+      height: 100px; }
+  header .menu {
+    display: inline-block; }
+    header .menu a {
+      margin-right: 30px;
+      padding: 7px;
+      text-transform: uppercase;
+      text-decoration: none;
+      font-size: 15px;
+      font-weight: bold;
+      color: #1873ad; }
+      header .menu a:hover {
+        background: #fff;
+        border-radius: 15px;
+        box-shadow: 0px 1px 15px -2px; }
+
+#banner {
+  height: 1300px;
+  background: url(../img/banner-bg.jpg) no-repeat top;
+  background-size: contain; }
+
 * {
   padding: 0;
   margin: 0;
@@ -21,5 +50,9 @@
 
 body {
   font-family: 'Roboto', sans-serif; }
+
+.container {
+  width: 1210px;
+  margin: 0 auto; }
 
 /*# sourceMappingURL=main.css.map */
