--- a/css/banner.scss
+++ b/css/banner.scss
@@ -2,4 +2,7 @@
   height: 1300px;
   background: url(../img/banner-bg.jpg) no-repeat top;
   background-size: contain;
+  h1 {
+    font-size: 60px;
+  }
 }
