--- a/css/banner.scss
+++ b/css/banner.scss
@@ -4,9 +4,22 @@
   background: url(../img/banner-bg.jpg) no-repeat;
   background-size: contain;
   h1 {
-    font-size: 60px;
+    font-size: 50px;
     margin: 0;
     font-weight: bold;
     color: #fff;
+    text-transform: uppercase;
+  }
+  .btn_preorder {
+    display: inline-block;
+    text-decoration: none;
+    background: #fff;
+    padding: 20px 35px;
+    margin-top: 50px;
+    text-transform: uppercase;
+    color: #06b4cf;
+    border-radius: 15px;
+    font-size: 16px;
+    font-weight: bold;
   }
 }
