--- a/css/header.scss
+++ b/css/header.scss
@@ -12,20 +12,29 @@ header {
     }
   }
   .menu {
-    display: inline-block;
+    display: flex;
+    align-items: center;
     a {
       margin-right: 30px;
-      padding: 7px;
+      padding: 5px 10px;
       text-transform: uppercase;
       text-decoration: none;
       font-size: 15px;
       font-weight: bold;
-      color: #1873ad;
+      color: $blue;
       &:hover {
         background: #fff;
         border-radius: 15px;
         box-shadow: 0px 1px 15px -2px;
       }
+    }
+    select {
+      border: 2px solid $blue;
+      border-radius: 20px;
+      cursor: pointer;
+      padding: 5px 10px;
+      outline: none;
+      color: $blue;
     }
   }
 }
