--- a/css/mobile.scss
+++ b/css/mobile.scss
@@ -1,1 +1,70 @@
+@media (max-width: 720px) {
+  body {
+    #banner {
+      text-align: center;
+      h1 {
+        font-size: 35px;
+      }
+      .banner-items {
+        flex-direction: column;
+        text-align: center;
+        align-items: center;
+        .web,
+        .time,
+        .garranty {
+          color: #222;
+          font-size: 14px;
+        }
+        .item {
+          background: #fff;
+          margin-bottom: 20px;
+          padding-bottom: 60px;
+          img {
+            background: #085b95;
+          }
+          a {
+            display: flex;
+            justify-content: center;
+            text-decoration: none;
+            color: #06b4cf;
+            font-size: 16px;
+            font-weight: 500;
+            text-transform: uppercase;
+            i {
+              margin-right: 10px;
+            }
+          }
+        }
+      }
+    }
+  }
+}
 
+@media (max-width: 992px) {
+ header {
+   .header {
+     display: flex;
+     flex-direction: column;
+   }
+ }
+}
+
+@media (max-width: 1200px) {
+  body {
+    .container {
+      width: 80%;
+    }
+    header {
+      .menu {
+        a {
+          margin-right: 5px;
+        }
+      }
+    }
+    #banner {
+      height: 100%;
+      background-size: cover;
+      background: #085b95;
+    }
+  }
+}
