--- a/css/header.scss
+++ b/css/header.scss
@@ -12,6 +12,7 @@ header {
     }
   }
   .menu {
+    overflow: hidden;
     display: flex;
     align-items: center;
     a {
@@ -35,6 +36,39 @@ header {
       padding: 5px 10px;
       outline: none;
       color: $blue;
+    }
+    .menu-toggle {
+      display: none;
+      position: absolute;
+      right: 30px;
+      top: 100px;
+      input {
+        opacity: 0;
+        &:checked {
+          nav {
+            transform: translateX(0%);
+            transition: .5s ease-out;
+          }
+        }
+      }
+      label {
+        position: absolute;
+        bottom: 0;
+        left: -9px;
+        width: 30px;
+        height: 20px;
+        cursor: pointer;
+      }
+      span {
+        display: block;
+        position: relative;
+        top: 0;
+        left: 0;
+        width: 30px;
+        height: 2px;
+        background: #222;
+        margin-bottom: 5px;
+      }
     }
   }
 }
