--- a/css/mobile.scss
+++ b/css/mobile.scss
@@ -1,8 +1,48 @@
-@media (max-width: 720px) {
+@media (max-width: 576px) {
+  body {
+    #banner {
+      .banner-items {
+        .item {
+          width: 100%;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  header {
+    .header {
+      .menu {
+        nav {
+          display: flex;
+          flex-direction: column;
+          text-align: center;
+          position: absolute;
+          top: 125px;
+          left: 0;
+          background: rgba(30, 42, 66, 0.8);
+          width: 100%;
+          transform: translateX(-100%);
+          transition: .5s ease-out;
+        }
+        select {
+          position: absolute;
+          left: 0;
+          top: 40px;
+          padding: 2px 5px;
+        }
+        .menu-toggle {
+          display: block;
+        }
+      }
+    }
+  }
   body {
     #banner {
       text-align: center;
       h1 {
+        margin-top: 50px;
         font-size: 35px;
       }
       .banner-items {
@@ -65,6 +105,14 @@
       height: 100%;
       background-size: cover;
       background: #085b95;
+    }
+  }
+}
+
+@media (min-width: 1200px) and (max-width: 1300px) {
+  body {
+    #banner {
+      background-size: cover;
     }
   }
 }
