--- a/css/fonts.scss
+++ b/css/fonts.scss
@@ -21,3 +21,4 @@
   src: url(../fonts/roboto/Roboto-Medium.ttf);
   font-weight: normal;
 }
+@import url("https://fonts.googleapis.com/css?family=Montserrat|Open+Sans+Condensed:300|Roboto");
