--- a/css/header.scss
+++ b/css/header.scss
@@ -11,7 +11,7 @@ header {
       }
     }
   }
-  .menu {
+  nav {
     overflow: hidden;
     display: flex;
     align-items: center;
@@ -29,6 +29,11 @@ header {
         box-shadow: 0px 1px 15px -2px;
       }
     }
+    input {
+      width: 30px;
+      height: 20px;
+      opacity: 0;
+    }
     select {
       border: 2px solid $blue;
       border-radius: 20px;
@@ -37,24 +42,12 @@ header {
       outline: none;
       color: $blue;
     }
-    .menu-toggle {
-      display: none;
-      position: absolute;
-      right: 30px;
-      top: 100px;
-      input {
-        opacity: 0;
-        &:checked {
-          nav {
-            transform: translateX(0%);
-            transition: .5s ease-out;
-          }
-        }
-      }
-      label {
+
+    label {
+        display: none;
         position: absolute;
-        bottom: 0;
-        left: -9px;
+        top: 100px;
+        right: 20px;
         width: 30px;
         height: 20px;
         cursor: pointer;
@@ -71,4 +64,3 @@ header {
       }
     }
   }
-}
