--- a/css/mobile.scss
+++ b/css/mobile.scss
@@ -14,26 +14,34 @@
   header {
     .header {
       .menu {
-        nav {
+        .navigation {
           display: flex;
           flex-direction: column;
           text-align: center;
           position: absolute;
-          top: 125px;
+          top: 135px;
           left: 0;
           background: rgba(30, 42, 66, 0.8);
           width: 100%;
-          transform: translateX(-100%);
-          transition: .5s ease-out;
+          transform: translateX(-115%);
+          transition: 1s ease-out;
+        }
+        input {
+          &:checked {
+            ~ .navigation {
+              transform: translateY(0%);
+              transition: 1s ease-out;
+            }
+          }
+        }
+        label {
+          display: block;
         }
         select {
           position: absolute;
           left: 0;
           top: 40px;
           padding: 2px 5px;
-        }
-        .menu-toggle {
-          display: block;
         }
       }
     }
