--- a/css/popup.scss
+++ b/css/popup.scss
@@ -1,8 +1,5 @@
-* {
-  font-family: 'Righteous', cursive;
-}
-
-.container {
+.popup {
+  .container {
   height: 157px;
   width: 854px;
   display: flex;
@@ -80,4 +77,5 @@ h6{
   justify-content: center;
   height:353.4px;
   width: 433.3px;
+}
 }
