--- a/css/header.scss
+++ b/css/header.scss
@@ -30,6 +30,8 @@ header {
       }
     }
     input {
+      position: absolute;
+      right: 20px;
       width: 30px;
       height: 20px;
       opacity: 0;
